--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
         "sensiolabs/security-checker": "^6.0",
         "symfony/debug-pack": "^1.0",
         "symfony/profiler-pack": "^1.0"
